==> kojotuse/ModulOdbiorczy/Src/RF24.c <==
#include "RF24.h"

void startListening(void)
{
    if(isListening == false)
    {
        writeRadioRegister(CONFIG, readRadioRegister(CONFIG) | _BV(PWR_UP) | _BV(PRIM_RX));
        clearInterruptFlag(true, true, true);

        // Restore the pipe0 adddress, if exists
        if (pipe0_reading_address)
            writeRadioRegisters(RX_ADDR_P0, (uint8_t *)&pipe0_reading_address, 5);

        // Flush buffers
        flush_rx();
        flush_tx();

        // Go!
        ce(HIGH);

        // wait for the radio to come up (130us actually only needed)

        delayMicroseconds(150);
        isListening = true;
    }
}

void startWrite(uint8_t *buf, uint8_t len)
{
    uint8_t config = readRadioRegister(CONFIG);
    // Clear the Status bit
    clearInterruptFlag(false, true, false);

    csn(LOW);

    // Send the payload
    write_payload(buf, len);

    // Transmitter power-up
    config = (config | _BV(PWR_UP)) & ~_BV(PRIM_RX);
    writeRadioRegister(CONFIG, config);
    delayMicroseconds(150);

    // Allons!
    ce(HIGH);
    delayMicroseconds(15);
    ce(LOW);
}

uint8_t write_payload(uint8_t *buf, uint8_t len)
{
    if (len > PAYLOAD_MAX_SIZE)
        len = PAYLOAD_MAX_SIZE;

    return SPIWriteRegisters(W_TX_PAYLOAD, len, buf);
}

uint8_t read_payload(uint8_t *buf, uint8_t len)
{
    uint8_t status;

    uint8_t bufferRx[PAYLOAD_MAX_SIZE] = {0};

    if (len > PAYLOAD_MAX_SIZE)
        len = PAYLOAD_MAX_SIZE;

    if ((status = SPIReadBytes(R_RX_PAYLOAD, len, bufferRx)) != 0xff)
    {
//        memcpy_fast(buf, bufferRx, len);
    	memcpy(buf, bufferRx, len);
        return status;
    }
}

bool powerDown(void)
{
    uint8_t config = readRadioRegister(CONFIG) & ~_BV(PWR_UP);
    writeRadioRegister(CONFIG, config);

    return ((readRadioRegister(CONFIG) == config) ? true : false);
}

bool powerUp(void)
{
    uint8_t config = readRadioRegister(CONFIG) | _BV(PWR_UP);
    writeRadioRegister(CONFIG, config);

    return ((readRadioRegister(CONFIG) == config) ? true : false);
}

uint8_t getDynamicPayloadSize(void)
{
    uint8_t payloadSize = 0;
    SPIWriteCommand(R_RX_PL_WID, &payloadSize);
    return payloadSize;
}

void enableDynamicPayloads(void)
{
    // Enable dynamic payload throughout the system
    writeRadioRegister(FEATURE, readRadioRegister(FEATURE) | _BV(EN_DPL));

    // If it didn't work, the features are not enabled
    if (!readRadioRegister(FEATURE))
    {
        // So enable them and try again
        toggle_features();
        writeRadioRegister(FEATURE, readRadioRegister(FEATURE) | _BV(EN_DPL));
    }

    //IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",readRadioRegister(FEATURE)));

    // Enable dynamic payload on all pipes
    //
    // Not sure the use case of only having dynamic payload on certain
    // pipes, so the library does not support it.
    writeRadioRegister(DYNPD, readRadioRegister(DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) | _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0));

    dynamic_payloads_enabled = true;
}

bool enableAckPayload(void)
{
    //
    // enable ack payload and dynamic payload features
    //

    enableDynamicPayloads();
    uint8_t features = readRadioRegister(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL);
    uint8_t dynpd = readRadioRegister(DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) | _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0);
    writeRadioRegister(FEATURE, features);

    // If it didn't work, the features are not enabled
    if (readRadioRegister(FEATURE) != features)
    {
        // So enable them and try again
        toggle_features();
        writeRadioRegister(FEATURE, readRadioRegister(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL));
    }

    writeRadioRegister(DYNPD, dynpd);

    return ((readRadioRegister(FEATURE) == features && readRadioRegister(DYNPD)) ? true : false);
}

bool setAutoAck(bool enable)
{
    uint8_t autoAck;
    if (enable)
        autoAck = 0b00111111;
    else
        autoAck = 0;

    writeRadioRegister(EN_AA, autoAck);

    return ((readRadioRegister(EN_AA) == autoAck) ? true : false);
}

bool setPALevel(rf24_pa_dbm_e level)
{
    uint8_t setup = readRadioRegister(RF_SETUP);
    setup &= ~(_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH));

    // switch uses RAM (evil!)
    if (level == RF24_PA_MAX)
    {
        setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH));
    }
    else if (level == RF24_PA_HIGH)
    {
        setup |= _BV(RF_PWR_HIGH);
    }
    else if (level == RF24_PA_LOW)
    {
        setup |= _BV(RF_PWR_LOW);
    }
    else if (level == RF24_PA_MIN)
    {
        // nothing
    }
    else if (level == RF24_PA_ERROR)
    {
        // On error, go to maximum PA
        setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH));
    }

    writeRadioRegister(RF_SETUP, setup);

    return ((readRadioRegister(RF_SETUP) == setup) ? true : false);
}

bool setDataRate(rf24_datarate_e speed)
{
    bool result = false;
    uint8_t setup = readRadioRegister(RF_SETUP);

    // HIGH and LOW '00' is 1Mbs - our default
    wide_band = false;
    setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH));
    if (speed == RF24_250KBPS)
    {
        // Must set the RF_DR_LOW to 1; RF_DR_HIGH (used to be RF_DR) is already 0
        // Making it '10'.
        wide_band = false;
        setup |= _BV(RF_DR_LOW);
    }
    else
    {
        // Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
        // Making it '01'
        if (speed == RF24_2MBPS)
        {
            wide_band = true;
            setup |= _BV(RF_DR_HIGH);
        }
        else
        {
            // 1Mbs
            wide_band = false;
        }
    }
    writeRadioRegister(RF_SETUP, setup);

    // Verify our result
    if (readRadioRegister(RF_SETUP) == setup)
    {
        result = true;
    }
    else
    {
        wide_band = false;
    }

    return result;
}

bool setCRCLength(rf24_crclength_e length)
{
    uint8_t config = readRadioRegister(CONFIG) & ~(_BV(CRCO) | _BV(EN_CRC));

    // switch uses RAM (evil!)
    if (length == RF24_CRC_DISABLED)
    {
        // Do nothing, we turned it off above.
    }
    else if (length == RF24_CRC_8)
    {
        config |= _BV(EN_CRC);
    }
    else
    {
        config |= _BV(EN_CRC);
        config |= _BV(CRCO);
    }
    writeRadioRegister(CONFIG, config);

    return ((readRadioRegister(CONFIG) == config) ? true : false);
}

void disableCRC(void)
{
    uint8_t disable = readRadioRegister(CONFIG) & ~_BV(EN_CRC);
    writeRadioRegister(CONFIG, disable);
}

bool setChannel(uint8_t channel)
{
    uint8_t ch = (channel < 127) ? channel : 127;

    writeRadioRegister(RF_CH, ch);
    return ((readRadioRegister(RF_CH) == ch) ? true : false);
}

void csn(int mode)
{
    HAL_GPIO_WritePin(SPIx_CSN_GPIO_PORT, SPIx_CSN_PIN, mode);
}

void ce(int level)
{
    HAL_GPIO_WritePin(SPIx_CE_GPIO_PORT, SPIx_CE_PIN, level);
}
